    set to the destination page. This avoids need for hacks to munge the urls
    in preview mode, which fixes several bugs.
  * Several destpage fixes in plugins.
  * Use absolute url for feedurl when filling out the feed templates.
    Closes: #470530
  * Fix expiry of old recentchanges changeset pages.
  * French translation update. Closes: #471010

 -- martin f. krafft <madduck@debian.org>  Sun, 02 Mar 2008 17:46:38 +0100

ikiwiki (2.40) unstable; urgency=low

  [ Josh Triplett ]
  * Add new preprocessor directive syntax¸ using a '!' prefix.  Add a
    prefix_directives option to the setup file to turn this syntax on;
    currently defaults to false, for backward compatibility.  Support
    optional '!' prefix even with prefix_directives off, and use that in
    the underlay to support either setting of prefix_directives.  Add NEWS
    entry with migration information.

  [ Joey Hess ]
  * Danish translation update from Jonas Smedegaard. Closes: #465152
  * Generate XML RPC messages with the encoding set to utf-8 instead
    of XML::RPC's default of us-ascii. Allows interoperation with
    python's xmlrpc library, which threw invalid encoding exceptions and
    caused the rst plugin to hang.
  * Add the linkify and scan hooks. These hooks can be used to implement
    custom, first-class types of wikilinks.
  * Move standard wikilink implementation to a new link plugin, which
    will of course be enabled by default.
  * camelcase: Convert to use new linkify and scan hooks rather than the old
    hack.
  * Setting NOTAINT=1 had no effect when building ikiwiki itself, fix this.
  * Depend on HTML::Scrubber, since the scrubber is enabled by default and
    dies if its can't be loaded.
  * The search plugin needs to override <base> to point to the directory
    containing ikiwiki.cgi, but this should not change the urls to the style
    sheets etc. Add a new forcebareurl parameter to misctemplate to allow
    it to do that.