@@ -40,6 +40,7 @@ ikiwiki (2.41) UNRELEASED; urgency=low
     Closes: #470530
   * Fix expiry of old recentchanges changeset pages.
   * French translation update. Closes: #471010
+  * external: Fix support of XML::RPC::fault.
 
  -- martin f. krafft <madduck@debian.org>  Sun, 02 Mar 2008 17:46:38 +0100
 
